[package]
edition = "2021"
name = "rusty-meet-up"
version = "0.1.0"

[dependencies]
actix-web = "3.3.3"
actix-cors = "0.5.4"

log = "0.4"
log4rs = "1.0.0"

dotenv = "0.15.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "0.8", features = ["v4"] }

# Test
actix-rt = "2.6.0"
once_cell = "1.9.0"